:bug: :lipstick: Badge aligns correct in safari

--- a/src/kirby/components/segmented-control/segmented-control.component.scss
+++ b/src/kirby/components/segmented-control/segmented-control.component.scss
@@ -49,6 +49,7 @@
       top: -#{size('xxs')};
       right: #{size('xxs')};
       z-index: z('segmentBadge');
+      display: flex;
     }
   }
 
